# DailyPaper

./: .gitignore  .pre-commit-config.yaml  DailyPaper.md  LICENSE  README.md  main.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: arxiv-summary.yaml  auto-merge.yaml
hook/: pyproject.toml
script/: fetch_papers.py  filter_papers.py  generate_markdown.py  git_operations.py  summarize_papers.py  update_daily.py  update_readme.py
summaries/: all_papers.md
summaries/2025-01/: 2025-01-22.md  2025-01-23.md  2025-01-24.md  2025-01-27.md  2025-01-28.md  2025-01-29.md  2025-01-30.md  2025-01-31.md
summaries/2025-02/: 2025-02-01.md  2025-02-02.md  2025-02-03.md  2025-02-04.md  2025-02-05.md  2025-02-06.md  2025-02-07.md  2025-02-08.md  2025-02-09.md  2025-02-10.md  2025-02-11.md  2025-02-12.md  2025-02-13.md  2025-02-14.md  2025-02-15.md  2025-02-16.md  2025-02-17.md  2025-02-18.md  2025-02-19.md  2025-02-20.md  2025-02-21.md  2025-02-22.md
